Fix history display x-alignment

--- a/style.css
+++ b/style.css
@@ -244,6 +244,7 @@ main {
         "gameboard"
         "history";
     align-items: center;
+    justify-items: center;
 
 }
 
